FlexDeploy 8.0/fdtlt82/FLEXDEPLOY-12131/objects/sf_devops__Change_Submission__c.object
<CustomObject>
    <fields>
        <fullName>sf_devops__Comment__c</fullName>
        <description>Allows for a comment to be associated with this submission</description>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf_devops__Creation_Result__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The results of the remote operation to create this commit.</description>
        <label>Creation Result</label>
        <referenceTo>sf_devops__Async_Operation_Result__c</referenceTo>
        <relationshipLabel>Change Submissions</relationshipLabel>
        <relationshipName>Change_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf_devops__Inspection_Result__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The results of the remote operation to inspect this commit.</description>
        <label>Inspection Result</label>
        <referenceTo>sf_devops__Async_Operation_Result__c</referenceTo>
        <relationshipLabel>Inspected Change Submissions</relationshipLabel>
        <relationshipName>Inspected_Change_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf_devops__Modified_Remote_Changes__c</fullName>
        <description>This field is deprecated and should not be referenced</description>
        <label>Modified Remote Changes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf_devops__Open_Beta_Migrated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal flag to determine if this change submission has been migrated to the open beta data model.  This field will be deleted in the future</description>
        <label>Open Beta Migrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf_devops__Prior_Remote_Reference__c</fullName>
        <description>The remote reference immediatly prior to this one on the branch.  This is in VCS specific format.</description>
        <label>Prior Remote Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Remote_Reference__c</fullName>
        <description>Reference information for this submission on the remote VCS.  This is in VCS specific format.</description>
        <label>Remote Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Removed_Remote_Changes__c</fullName>
        <description>This field is deprecated and should not be referenced</description>
        <label>Removed Remote Changes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf_devops__Repository__c</fullName>
        <description>The repository this CS is associated with</description>
        <label>Repository</label>
        <referenceTo>sf_devops__Repository__c</referenceTo>
        <relationshipName>Change_Submissions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sf_devops__Submitted_By_Name__c</fullName>
        <description>The name of the user that did the submit, if the user is not in our organization.</description>
        <label>Submitted By Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Submitted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user that submitted this change.</description>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf_devops__Submitted_On__c</fullName>
        <description>When this submission was submitted.</description>
        <label>Submitted On</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sf_devops__Work_Item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The work item this submission belongs to</description>
        <label>Work Item</label>
        <referenceTo>sf_devops__Work_Item__c</referenceTo>
        <relationshipLabel>Change Submissions</relationshipLabel>
        <relationshipName>Change_Submissions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Change Submission</label>
    <nameField>
        <displayFormat>CS-{00000}</displayFormat>
        <label>Change Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Submissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>sf_devops__Prior_Remote_Reference_External_Only</fullName>
        <active>true</active>
        <errorConditionFormula>FALSE</errorConditionFormula>
        <errorMessage>Deprecated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sf_devops__Work_Item_and_Repository_Same_Project</fullName>
        <active>true</active>
        <description>Verify that our work item and repository are from the same project.</description>
        <errorConditionFormula>AND(
 ISNEW() ,
  sf_devops__Work_Item__r.sf_devops__Project__r.sf_devops__Platform_Repository__c  &lt;&gt;  sf_devops__Repository__c 

)</errorConditionFormula>
        <errorMessage>Cannot be associated with a Work Item from a different project.</errorMessage>
    </validationRules>
</CustomObject>